metadata/layout.conf: disable 'pms' cache regeneration (as ::gentoo does)
Signed-off-by: Sergei Trofimovich <slyfox@gentoo.org>

--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -1,4 +1,4 @@
 masters = gentoo
-cache-formats = md5-dict pms
+cache-formats = md5-dict
 thin-manifests = true
 manifest-hashes = SHA256 SHA512 WHIRLPOOL
