metadata/layout.conf: deprecate all EAPIs lower, than 5
As we use subslots extensively we should push our users
heavier to update ebuilds up to EAPI=5.

https://blogs.gentoo.org/johu/2013/07/01/deprecating-and-banning-old-eapis/

Signed-off-by: Sergei Trofimovich <slyfox@gentoo.org>

--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -2,3 +2,4 @@ masters = gentoo
 cache-formats = md5-dict
 thin-manifests = true
 manifest-hashes = SHA256 SHA512 WHIRLPOOL
+eapis-deprecated = 0 1 2 3 4
