metadata/layout.conf: don't deprecate too popular EAPIs for now
Signed-off-by: Sergei Trofimovich <slyfox@gentoo.org>

--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -2,4 +2,7 @@ masters = gentoo
 cache-formats = md5-dict
 thin-manifests = true
 manifest-hashes = SHA256 SHA512 WHIRLPOOL
-eapis-deprecated = 0 1 2 3 4
+# too many ebuilds are using old EAPIs
+#eapis-deprecated = 0 1 2 3 4
+#let's start from smaller amount:
+eapis-deprecated = 0 1 2
