.gitignore: add use.local.desc to gitignore
Signed-off-by: Sergei Trofimovich <slyfox@gentoo.org>

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,8 @@
 projects/lambdaman/*.hi
 projects/lambdaman/*.o
 projects/lambdaman/lambdaman
+
+# egencache autostuff
 metadata/cache/
 metadata/md5-cache/
+profiles/use.local.desc
